--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
   <header class="header">
     <div class="container nav">
-      <div class="brand">CRMundi</div>
+      <a class="brand" href="#" aria-label="CRMundi">
+        <img src="img/logo.png" alt="CRMundi" />
+      </a>
       <nav class="menu">
         <a href="#modulos">Módulos</a>
         <a href="#integracoes">Integrações</a>
