refactor: novo tema de cores e imagens para teste

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
         <div class="hero-media">
-          <div class="mockup">Prévia do CRMundi</div>
+          <div class="mockup"><img src="./img/demo.png"></div>
         </div>
       </div>
     </section>
@@ -74,7 +74,7 @@
       </div>
     </section>
 
-    <section id="integracoes" class="section alt">
+    <section id="integracoes" class="section integrations">
       <div class="container">
         <h2>Integração com WhatsApp</h2>
         <div class="grid two">
@@ -86,7 +86,7 @@
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener" href="https://wa.me/PHONE_55?text=Quero%20conhecer%20a%20integra%C3%A7%C3%A3o%20WhatsApp%20da%20CRMundi">Ver em ação</a>
           </div>
-          <div class="panel">Integração WhatsApp</div>
+          <div class="panel"><img src="./img/chatwoot.webp"></div>
         </div>
       </div>
     </section>
