feat: valores dos planos

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CRMundi — CRM de Vendas, Pós-vendas, Financeiro e WhatsApp</title>
-  <meta name="description" content="CRMundi é um CRM completo com módulos de Vendas, Pós-vendas, Financeiro e chat integrado ao WhatsApp." />
+  <meta name="description"
+    content="CRMundi é um CRM completo com módulos de Vendas, Pós-vendas, Financeiro e chat integrado ao WhatsApp." />
   <meta property="og:title" content="CRMundi — CRM completo com WhatsApp" />
-  <meta property="og:description" content="Organize seu funil de vendas, atenda no WhatsApp e gerencie o financeiro em um só lugar." />
+  <meta property="og:description"
+    content="Organize seu funil de vendas, atenda no WhatsApp e gerencie o financeiro em um só lugar." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://crmundi.com" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
   <header class="header">
     <div class="container nav">
@@ -22,7 +26,8 @@
         <a href="#integracoes">Integrações</a>
         <a href="#beneficios">Benefícios</a>
         <a href="#contato">Contato</a>
-        <a class="btn btn-primary" target="_blank" rel="noopener" href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
+        <a class="btn btn-primary" target="_blank" rel="noopener"
+          href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
       </nav>
       <button class="menu-toggle" aria-label="Abrir menu" onclick="toggleMenu()">☰</button>
     </div>
@@ -35,7 +40,8 @@
           <h1>Seu CRM unificado com WhatsApp</h1>
           <p>Vendas, pós-vendas e financeiro em um só lugar. Atenda seus clientes via WhatsApp sem sair do CRM.</p>
           <div class="cta">
-            <a class="btn btn-primary" target="_blank" rel="noopener" href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Solicitar demo</a>
+            <a class="btn btn-primary" target="_blank" rel="noopener"
+              href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Solicitar demo</a>
             <a class="btn btn-secondary" href="#modulos">Ver módulos</a>
           </div>
           <ul class="bullets">
@@ -84,7 +90,9 @@
               <li>Templates e respostas rápidas</li>
               <li>Registro automático no histórico do cliente</li>
             </ul>
-            <a class="btn btn-primary" target="_blank" rel="noopener" href="https://wa.me/PHONE_55?text=Quero%20conhecer%20a%20integra%C3%A7%C3%A3o%20WhatsApp%20da%20CRMundi">Ver em ação</a>
+            <a class="btn btn-primary" target="_blank" rel="noopener"
+              href="https://wa.me/PHONE_55?text=Quero%20conhecer%20a%20integra%C3%A7%C3%A3o%20WhatsApp%20da%20CRMundi">Ver
+              em ação</a>
           </div>
           <div class="panel"><img src="./img/chatwoot.webp"></div>
         </div>
@@ -113,9 +121,59 @@
 
     <section id="contato" class="section cta-band">
       <div class="container cta-band-inner">
+        <h2>Confira nossos planos</h2>
+        <div class="plans grid cards">
+          <article class="card">
+            <h3>Essencial - Para começar com eficiência</h3>
+            <p>Mensalidade: <strong>R$99,00</strong></p>
+            <p>Plano anual: <strong>R$999,00</strong></p>
+            <ul>
+              <li>Ideal para quem quer sair do Excel e começar a crescer com dados e automação</li>
+              <li>Público-alvo: agências pequenas e independentes que ainda estão migrando do Excel</li>
+              <li>Módulos de Vendas, Pós-Vendas e Financeiro</li>
+              <li>ChatMundi básico (integração com WhatsApp para 1 usuário)</li>
+              <li>1 automação de WhatsApp incluída</li>
+              <li>Relatório simplificado de vendas</li>
+            </ul>
+            <a class="btn btn-primary" target="_blank" rel="noopener"
+              href="https://wa.me/PHONE_55?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
+          </article>
+
+          <article class="card">
+            <h3>Profissional - O plano irresistível</h3>
+            <p>Mensalidade: <strong>R$199,90</strong></p>
+            <p>Plano anual: <strong>R$1999,00</strong></p>
+            <ul>
+              <li>Com apenas 1 venda extra gerada pelo Agente de IA, o plano já se paga</li>
+              <li>Tudo do plano Essencial</li>
+              <li>ChatMundi completo (integração WhatsApp multiusuários e automações ilimitadas)</li>
+              <li>Agente de IA para qualificação de leads e atendimento inicial</li>
+              <li>Suporte prioritário e consultoria de automação (1 mês incluído)</li>
+              <li>Setup gratuito para os 100 primeiros clientes</li>
+              <li>Selo "Clube dos Pioneiros CRMundi" com benefícios vitalícios</li>
+            </ul>
+            <a class="btn btn-primary" target="_blank" rel="noopener"
+              href="https://wa.me/PHONE_55?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
+          </article>
+
+          <article class="card">
+            <h3>Enterprise - O plano definitivo</h3>
+              <p>A partir de <strong>R$999,00</strong>/mês</p>
+            <ul>
+              <li>Feito sob medida para quem já superou o básico e quer dominar o mercado</li>
+              <li>Tudo do Plano Profissional</li>
+              <li>Contabilidade Básica</li>
+              <li>Suporte 24/7 para seus clientes</li>
+              <li>Consultoria Financeira Personalizada</li>
+            </ul>
+            <a class="btn btn-primary" target="_blank" rel="noopener"
+              href="https://wa.me/PHONE_55?text=Quero%20o%20plano%20Enterprise%20do%20CRMundi">Assinar</a>
+          </article>
+        </div>
         <h2>Pronto para acelerar seu time com o CRMundi?</h2>
         <div class="cta">
-          <a class="btn btn-primary" target="_blank" rel="noopener" href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
+          <a class="btn btn-primary" target="_blank" rel="noopener"
+            href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
           <a class="btn btn-secondary" href="mailto:contato@crmundi.com">Enviar e-mail</a>
         </div>
       </div>
@@ -149,4 +207,5 @@
 
   <script src="./script.js"></script>
 </body>
+
 </html>
