feature: adicionando contato whatsapp

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#beneficios">Benefícios</a>
         <a href="#contato">Contato</a>
         <a class="btn btn-primary" target="_blank" rel="noopener"
-          href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
+          href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
       </nav>
       <button class="menu-toggle" aria-label="Abrir menu" onclick="toggleMenu()">☰</button>
     </div>
@@ -41,7 +41,7 @@
           <p>Vendas, pós-vendas e financeiro em um só lugar. Atenda seus clientes via WhatsApp sem sair do CRM.</p>
           <div class="cta">
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Solicitar demo</a>
+              href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Solicitar demo</a>
             <a class="btn btn-secondary" href="#modulos">Ver módulos</a>
           </div>
           <ul class="bullets">
@@ -91,7 +91,7 @@
               <li>Registro automático no histórico do cliente</li>
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/PHONE_55?text=Quero%20conhecer%20a%20integra%C3%A7%C3%A3o%20WhatsApp%20da%20CRMundi">Ver
+              href="https://wa.me/5521982451106?text=Quero%20conhecer%20a%20integra%C3%A7%C3%A3o%20WhatsApp%20da%20CRMundi">Ver
               em ação</a>
           </div>
           <div class="panel"><img src="./img/chatwoot.webp"></div>
@@ -136,7 +136,7 @@
               <li>Relatório simplificado de vendas</li>
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/PHONE_55?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
+              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
           </article>
 
           <article class="card">
@@ -153,7 +153,7 @@
               <li>Selo "Clube dos Pioneiros CRMundi" com benefícios vitalícios</li>
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/PHONE_55?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
+              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
           </article>
 
           <article class="card">
@@ -167,13 +167,13 @@
               <li>Consultoria Financeira Personalizada</li>
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/PHONE_55?text=Quero%20o%20plano%20Enterprise%20do%20CRMundi">Assinar</a>
+              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Enterprise%20do%20CRMundi">Assinar</a>
           </article>
         </div>
         <h2>Pronto para acelerar seu time com o CRMundi?</h2>
         <div class="cta">
           <a class="btn btn-primary" target="_blank" rel="noopener"
-            href="https://wa.me/PHONE_55?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
+            href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
           <a class="btn btn-secondary" href="mailto:contato@crmundi.com">Enviar e-mail</a>
         </div>
       </div>
@@ -190,7 +190,7 @@
         <strong>Contato</strong>
         <ul>
           <li><a href="mailto:contato@crmundi.com">contato@crmundi.com</a></li>
-          <li><a target="_blank" rel="noopener" href="https://wa.me/PHONE_55">WhatsApp</a></li>
+          <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp</a></li>
         </ul>
       </div>
       <div>
