--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="cta">
           <a class="btn btn-primary" target="_blank" rel="noopener"
             href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
-          <a class="btn btn-secondary" href="mailto:contato@crmundi.com">Enviar e-mail</a>
+          <a class="btn btn-secondary" href="mailto:contato@crmundi.com.br">Enviar e-mail</a>
         </div>
       </div>
     </section>
@@ -189,7 +189,7 @@
       <div>
         <strong>Contato</strong>
         <ul>
-          <li><a href="mailto:contato@crmundi.com">contato@crmundi.com</a></li>
+          <li><a href="mailto:contato@crmundi.com.br">contato@crmundi.com.br</a></li>
           <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp</a></li>
         </ul>
       </div>
