feature: inclusão link de pagamento assinaturas CRMundi

--- a/index.html
+++ b/index.html
@@ -136,7 +136,11 @@
               <li>Relatório simplificado de vendas</li>
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
+              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=3067ea2489364748b0a579d1043b8324">Assinar
+              Mensal</a>
+            <a class="btn btn-primary" target="_blank" rel="noopener"
+              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=35a96572847f40518ed4b0a4f1982f52">Assinar
+              Anual</a>
           </article>
 
           <article class="card">
@@ -153,12 +157,16 @@
               <li>Selo "Clube dos Pioneiros CRMundi" com benefícios vitalícios</li>
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Essencial%20do%20CRMundi">Assinar</a>
+              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=861843fa00cd498fa267392ff2ee2bff">Assinar
+              Mensal</a>
+            <a class="btn btn-primary" target="_blank" rel="noopener"
+              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=b7c6c883639148a8bcf7bf544c029ed2">Assinar
+              Anual</a>
           </article>
 
           <article class="card">
             <h3>Enterprise - O plano definitivo</h3>
-              <p>A partir de <strong>R$999,00</strong>/mês</p>
+            <p>A partir de <strong>R$999,00</strong>/mês</p>
             <ul>
               <li>Feito sob medida para quem já superou o básico e quer dominar o mercado</li>
               <li>Tudo do Plano Profissional</li>
@@ -167,7 +175,7 @@
               <li>Consultoria Financeira Personalizada</li>
             </ul>
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Enterprise%20do%20CRMundi">Assinar</a>
+              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Enterprise%20do%20CRMundi">Fale conosco</a>
           </article>
         </div>
         <h2>Pronto para acelerar seu time com o CRMundi?</h2>
