feature: nova imagem principal CRMundi

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </ul>
         </div>
         <div class="hero-media">
-          <div class="mockup"><img src="./img/demo.png"></div>
+          <div class="mockup"><img src="./img/demo-note.png"></div>
         </div>
       </div>
     </section>
