feature: mensagem de conclusão de assinatura

--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
       <div>
         <strong>Links</strong>
         <ul>
-          <li><a href="#modulos">Módulos</a></li>
-          <li><a href="#integracoes">Integrações</a></li>
-          <li><a href="#beneficios">Benefícios</a></li>
+          <li><a href="index.html#modulos">Módulos</a></li>
+          <li><a href="index.html#integracoes">Integrações</a></li>
+          <li><a href="index.html#beneficios">Benefícios</a></li>
         </ul>
       </div>
     </div>
