--- a/assinatura_efetuada.html
+++ b/assinatura_efetuada.html
@@ -18,14 +18,14 @@
 <body>
   <header class="header">
     <div class="container nav">
-      <a class="brand" href="#" aria-label="CRMundi">
+      <a class="brand" href="./" aria-label="CRMundi">
         <img src="img/logo.png" alt="CRMundi" />
       </a>
       <nav class="menu">
-        <a href="#modulos">Módulos</a>
-        <a href="#integracoes">Integrações</a>
-        <a href="#beneficios">Benefícios</a>
-        <a href="#contato">Contato</a>
+        <a href="./#modulos">Módulos</a>
+        <a href="./#integracoes">Integrações</a>
+        <a href="./#beneficios">Benefícios</a>
+        <a href="./#contato">Contato</a>
         <a class="btn btn-primary" target="_blank" rel="noopener"
           href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
       </nav>
@@ -61,9 +61,9 @@
       <div>
         <strong>Links</strong>
         <ul>
-          <li><a href="index.html#modulos">Módulos</a></li>
-          <li><a href="index.html#integracoes">Integrações</a></li>
-          <li><a href="index.html#beneficios">Benefícios</a></li>
+          <li><a href="./#modulos">Módulos</a></li>
+          <li><a href="./#integracoes">Integrações</a></li>
+          <li><a href="./#beneficios">Benefícios</a></li>
         </ul>
       </div>
     </div>
