--- a/assinatura_efetuada.html
+++ b/assinatura_efetuada.html
@@ -12,7 +12,7 @@
     content="Organize seu funil de vendas, atenda no WhatsApp e gerencie o financeiro em um só lugar." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://crmundi.com" />
-  <link rel="stylesheet" href="./styles.css?v=1.0.2" />
+  <link rel="stylesheet" href="./styles.css??v=1.0.3" />
 </head>
 
 <body>
@@ -70,7 +70,7 @@
     <div class="copy">© <span id="year"></span> CRMundi. Todos os direitos reservados.</div>
   </footer>
 
-  <script src="./script.js?v=1.0.2"></script>
+  <script src="./script.js??v=1.0.3"></script>
 </body>
 
 </html>
