refactor: imagem branc chatwoot

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               href="https://wa.me/5521982451106?text=Quero%20conhecer%20a%20integra%C3%A7%C3%A3o%20WhatsApp%20da%20CRMundi">Ver
               em ação</a>
           </div>
-          <div class="panel"><img src="./img/chatwoot.webp"></div>
+          <div class="panel"><img src="./img/chatwoot-white.webp"></div>
         </div>
       </div>
     </section>
