feat: add Programa de Profissionalização link and update contact details

--- a/programa_profissionalizacao_agencias.html
+++ b/programa_profissionalizacao_agencias.html
@@ -22,10 +22,10 @@
         <img src="img/logo.png" alt="CRMundi" />
       </a>
       <nav class="menu">
-        <a href="./#modulos">Módulos</a>
-        <a href="./#integracoes">Integrações</a>
-        <a href="./#beneficios">Benefícios</a>
-        <a href="./Programa de Profissionalização CRMundiPrograma de Profissionalização CRMundi">Contato</a>
+        <a href="#porque_participar">Por que participar?</a>
+        <a href="#vantagens">Vantagens</a>
+        <a href="#cronograma">Cronograma</a>
+        <a href="#contato">Contato</a>
         <a class="btn btn-primary" target="_blank" rel="noopener"
           href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
       </nav>
@@ -38,17 +38,21 @@
       <div class="container hero-grid">
         <div class="hero-text">
           <h1>Programa de Profissionalização CRMundi</h1>
-          <p>Vendas, pós-vendas e financeiro em um só lugar. Atenda seus clientes via WhatsApp sem sair do CRM.</p>
-          <div class="cta">
+          <p>Gestão, tecnologia e estratégia para agências de viagens que querem crescer com dados</p>
+          <div class="cta" style="margin-bottom: 20px;">
             <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Solicitar demo</a>
-            <a class="btn btn-secondary" href="./#modulos">Ver módulos</a>
+              href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Inscreva-se já</a>
           </div>
-          <ul class="bullets">
-            <li>Pipeline visual e metas</li>
-            <li>Atendimentos centralizados</li>
-            <li>Financeiro conectado às vendas</li>
-          </ul>
+          <p>
+            O Programa de Profissionalização CRMundi foi criado para ajudar agências de viagens a evoluírem sua gestão,
+            aumentarem a rentabilidade e tomarem decisões mais estratégicas a partir de dados organizados, processos
+            claros e uso inteligente da tecnologia.
+          </p>
+          <p>
+            Em um mercado onde 91% das empresas já utilizam algum tipo de CRM, a verdadeira vantagem competitiva não
+            está apenas em ter dados, mas em conectar informações de vendas, financeiro, atendimento e relacionamento em
+            um único ecossistema.
+          </p>
         </div>
         <div class="hero-media">
           <div class="mockup"><img src="./img/demo-note.png"></div>
@@ -58,41 +62,61 @@
 
     <section id="modulos" class="section">
       <div class="container">
-        <h2>Módulos do CRMundi</h2>
+        <h2>Por que participar?</h2>
+        <h3>Uma gestão eficiente começa quando sua agência tem:</h3>
         <div class="grid cards">
           <article class="card">
-            <h3>Vendas</h3>
-            <p>Pipeline, oportunidades, funil por etapas, tarefas, metas e relatórios.</p>
+            <h3>Visibilidade completa do histórico do cliente</h3>
           </article>
           <article class="card">
-            <h3>Pós-vendas</h3>
-            <p>Atendimentos, SLA, NPS e histórico completo do cliente.</p>
+            <h3>Previsibilidade de fluxo de caixa com dados em tempo real</h3>
           </article>
           <article class="card">
-            <h3>Financeiro</h3>
-            <p>Receitas e despesas vinculadas às vendas, conciliação e relatórios.</p>
+            <h3>Painéis unificados para decisões rápidas e estratégicas</h3>
           </article>
           <article class="card">
-            <h3>Chat com WhatsApp</h3>
-            <p>Conversas integradas via WhatsApp para times de vendas e suporte.</p>
+            <h3>Menos dependência de planilhas, anotações e informações descentralizadas</h3>
           </article>
         </div>
+        <h3>O CRMundi ajuda sua agência a sair da operação reativa e avançar para uma gestão orientada por dados, focada
+          em crescimento sustentável.</h3>
       </div>
     </section>
 
     <section id="integracoes" class="section integrations">
       <div class="container">
-        <h2>Integração com WhatsApp</h2>
+        <h2>O que sua agência ganha na prática</h2>
         <div class="grid two">
           <div>
             <ul class="list">
-              <li>Centralize conversas por contato e oportunidade</li>
-              <li>Templates e respostas rápidas</li>
-              <li>Registro automático no histórico do cliente</li>
+              <li><strong>Até 50% mais visibilidade da operação</strong>
+                <ul>
+                  <li>Vendas, conversas, financeiro e pós-vendas integrados em um só lugar.</li>
+                </ul>
+              </li>
+              <li><strong>40% de melhoria na aquisição de oportunidades</strong>
+                <ul>
+                  <li>Funil estruturado, pipeline claro e acompanhamento real das negociações.</li>
+                </ul>
+              </li>
+              <li><strong>Até 60% de redução de perdas por descentralização de informações</strong>
+                <ul>
+                  <li>Dados organizados, acessíveis e confiáveis para toda a equipe.</li>
+                </ul>
+              </li>
             </ul>
-            <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/5521982451106?text=Quero%20conhecer%20a%20integra%C3%A7%C3%A3o%20WhatsApp%20da%20CRMundi">Ver
-              em ação</a>
+            <h3>Além disso, estratégias Omnichannel geram:</h3>
+            <div>
+              <ul class="list">
+                <li><strong>Taxa de retenção até 90% maior</strong></li>
+                <li><strong>Aumento de 30% no LTV dos clientes</strong></li>
+                <li><strong>Clientes que gastam, em média, 30% mais</strong></li>
+              </ul>
+            </div>
+            <div class="cta">
+              <a class="btn btn-primary" target="_blank" rel="noopener"
+                href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Inscreva-se já</a>
+            </div>
           </div>
           <div class="panel"><img src="./img/chatwoot-white.webp"></div>
         </div>
@@ -101,19 +125,23 @@
 
     <section id="beneficios" class="section">
       <div class="container">
-        <h2>Benefícios</h2>
+        <h2>Cronograma do Programa</h2>
         <div class="grid cards">
           <article class="card">
-            <h3>Produtividade</h3>
-            <p>Menos abas abertas. Tudo no mesmo fluxo de trabalho.</p>
+            <h3>IA para Agências de Viagens</h3>
+            <p>📅 24/02/2026 - 19h</p>
           </article>
           <article class="card">
-            <h3>Previsibilidade</h3>
-            <p>Relatórios de funil e financeiro ajudam a projetar resultados.</p>
+            <h3>Reforma Tributária e os impactos para Agências de Viagens</h3>
+            <p>📅 26/02/2026 - 19h</p>
           </article>
           <article class="card">
-            <h3>Colaboração</h3>
-            <p>Time alinhado com histórico único por cliente e negócio.</p>
+            <h3>Como integrar ferramentas de marketing ao seu CRM</h3>
+            <p>📅 03/03/2026 - 19h</p>
+          </article>
+          <article class="card">
+            <h3>Índices financeiros e quanto vale sua Agência de Viagens</h3>
+            <p>📅 05/03/2026 - 19h</p>
           </article>
         </div>
       </div>
@@ -121,68 +149,37 @@
 
     <section id="contato" class="section cta-band">
       <div class="container cta-band-inner">
-        <h2>Confira nossos planos</h2>
+        <h2>Tudo o que sua agência precisa em um só lugar</h2>
         <div class="plans grid cards">
           <article class="card">
-            <h3>Essencial - Para começar com eficiência</h3>
-            <p>Mensalidade: <strong>R$99,00</strong></p>
-            <p>Plano anual: <strong>R$999,00</strong></p>
+            <h3>Recursos</h3>
             <ul>
-              <li>Ideal para quem quer sair do Excel e começar a crescer com dados e automação</li>
-              <li>Público-alvo: agências pequenas e independentes que ainda estão migrando do Excel</li>
-              <li>Módulos de Vendas, Pós-Vendas e Financeiro</li>
-              <li>ChatMundi básico (integração com WhatsApp para 1 usuário)</li>
-              <li>1 automação de WhatsApp incluída</li>
-              <li>Relatório simplificado de vendas</li>
+              <li>Vendas: pipeline, funil por etapas, tarefas, metas e relatórios</li>
+              <li>Financeiro: receitas e despesas vinculadas às vendas, conciliação e relatórios</li>
+              <li>Pós-vendas: atendimentos, SLA, NPS e histórico completo do cliente</li>
+              <li>WhatsApp integrado: comunicação centralizada para vendas e suporte</li>
             </ul>
-            <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=3067ea2489364748b0a579d1043b8324">Assinar
-              Mensal</a>
-            <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=35a96572847f40518ed4b0a4f1982f52">Assinar
-              Anual</a>
           </article>
 
           <article class="card">
-            <h3>Profissional - O plano irresistível</h3>
-            <p>Mensalidade: <strong>R$199,90</strong></p>
-            <p>Plano anual: <strong>R$1999,00</strong></p>
+            <h3>Benefício exclusivo para associados ABAV</h3>
             <ul>
-              <li>Com apenas 1 venda extra gerada pelo Agente de IA, o plano já se paga</li>
-              <li>Tudo do plano Essencial</li>
-              <li>ChatMundi completo (integração WhatsApp multiusuários e automações ilimitadas)</li>
-              <li>Agente de IA para qualificação de leads e atendimento inicial</li>
-              <li>Suporte prioritário e consultoria de automação (1 mês incluído)</li>
-              <li>Setup gratuito para os 100 primeiros clientes</li>
-              <li>Selo "Clube dos Pioneiros CRMundi" com benefícios vitalícios</li>
+              <li>👉 Associados ABAV ganham acesso gratuito ao CRMundi por 6 meses.</li>
             </ul>
-            <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=861843fa00cd498fa267392ff2ee2bff">Assinar
-              Mensal</a>
-            <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=b7c6c883639148a8bcf7bf544c029ed2">Assinar
-              Anual</a>
           </article>
 
           <article class="card">
-            <h3>Enterprise - O plano definitivo</h3>
-            <p>A partir de <strong>R$999,00</strong>/mês</p>
+            <h3>Não perca tempo</h3>
             <ul>
-              <li>Feito sob medida para quem já superou o básico e quer dominar o mercado</li>
-              <li>Tudo do Plano Profissional</li>
-              <li>Contabilidade Básica</li>
-              <li>Suporte 24/7 para seus clientes</li>
-              <li>Consultoria Financeira Personalizada</li>
+              <li>Mais de R$ 2.000.000,00 já foram economizados por agências que adotaram uma gestão integrada,
+                orientada por dados e processos claros.</li>
             </ul>
-            <a class="btn btn-primary" target="_blank" rel="noopener"
-              href="https://wa.me/5521982451106?text=Quero%20o%20plano%20Enterprise%20do%20CRMundi">Fale conosco</a>
           </article>
         </div>
         <h2>Pronto para acelerar seu time com o CRMundi?</h2>
         <div class="cta">
           <a class="btn btn-primary" target="_blank" rel="noopener"
-            href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
-          <a class="btn btn-secondary" href="mailto:contato@crmundi.com.br">Enviar e-mail</a>
+            href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Inscreva-se já</a>
         </div>
       </div>
     </section>
@@ -195,18 +192,18 @@
         <p>CRM com Vendas, Pós-vendas, Financeiro e WhatsApp.</p>
       </div>
       <div>
-        <strong>Contato</strong>
+        <strong id="contato">Contato</strong>
         <ul>
           <li><a href="mailto:contato@crmundi.com.br">contato@crmundi.com.br</a></li>
-          <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp</a></li>
+          <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp: (21) 98245 1106</a></li>
         </ul>
       </div>
       <div>
         <strong>Links</strong>
         <ul>
-          <li><a href="./#modulos">Módulos</a></li>
-          <li><a href="./#integracoes">Integrações</a></li>
-          <li><a href="./#beneficios">Benefícios</a></li>
+          <li><a href="./#porque_participar">Módulos</a></li>
+          <li><a href="./#vantagens">Integrações</a></li>
+          <li><a href="./#cronograma">Benefícios</a></li>
         </ul>
       </div>
     </div>
