--- a/assinatura_efetuada.html
+++ b/assinatura_efetuada.html
@@ -25,7 +25,8 @@
         <a href="./#modulos">Módulos</a>
         <a href="./#integracoes">Integrações</a>
         <a href="./#beneficios">Benefícios</a>
-        <a href="./#contato">Contato</a>
+        <a href="#contato">Contato</a>
+        <a href="./programa_profissionalizacao_agencias.html">Programa de profissionalização</a>
         <a class="btn btn-primary" target="_blank" rel="noopener"
           href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
       </nav>
@@ -52,10 +53,10 @@
         <p>CRM com Vendas, Pós-vendas, Financeiro e WhatsApp.</p>
       </div>
       <div>
-        <strong>Contato</strong>
+        <strong id="contato">Contato</strong>
         <ul>
           <li><a href="mailto:contato@crmundi.com.br">contato@crmundi.com.br</a></li>
-          <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp</a></li>
+          <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp: (21) 98245 1106</a></li>
         </ul>
       </div>
       <div>
