--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="./#integracoes">Integrações</a>
         <a href="./#beneficios">Benefícios</a>
         <a href="./#contato">Contato</a>
+        <a href="./programa_profissionalizacao_agencias.html">Programa de profissionalização</a>
         <a class="btn btn-primary" target="_blank" rel="noopener"
           href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
       </nav>
@@ -119,7 +120,7 @@
       </div>
     </section>
 
-    <section id="contato" class="section cta-band">
+    <section id="planos" class="section cta-band">
       <div class="container cta-band-inner">
         <h2>Confira nossos planos</h2>
         <div class="plans grid cards">
@@ -195,10 +196,10 @@
         <p>CRM com Vendas, Pós-vendas, Financeiro e WhatsApp.</p>
       </div>
       <div>
-        <strong>Contato</strong>
+        <strong id="contato">Contato</strong>
         <ul>
           <li><a href="mailto:contato@crmundi.com.br">contato@crmundi.com.br</a></li>
-          <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp</a></li>
+          <li><a target="_blank" rel="noopener" href="https://wa.me/5521982451106">WhatsApp: (21) 98245 1106</a></li>
         </ul>
       </div>
       <div>
