feat: add new images for professionalization program and update references in HTML

--- a/programa_profissionalizacao_agencias.html
+++ b/programa_profissionalizacao_agencias.html
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div class="hero-media">
-          <div class="mockup"><img src="./img/demo-note.png"></div>
+          <div class="mockup"><img src="./img/profissionalizacao.png"></div>
         </div>
       </div>
     </section>
@@ -118,7 +118,7 @@
                 href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Inscreva-se já</a>
             </div>
           </div>
-          <div class="panel"><img src="./img/chatwoot-white.webp"></div>
+          <div class="panel"><img src="./img/vantagens.png"></div>
         </div>
       </div>
     </section>
