--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="./#integracoes">Integrações</a>
         <a href="./#beneficios">Benefícios</a>
         <a href="./#contato">Contato</a>
-        <a href="./programa_profissionalizacao_agencias.html">Programa de profissionalização</a>
+        <a href="./programa_profissionalizacao_agencias">Programa de profissionalização</a>
         <a class="btn btn-primary" target="_blank" rel="noopener"
           href="https://wa.me/5521982451106?text=Quero%20uma%20demo%20do%20CRMundi">Falar no WhatsApp</a>
       </nav>
