fix: update page titles for improved clarity and relevance

--- a/assinatura_efetuada.html
+++ b/assinatura_efetuada.html
@@ -4,14 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CRMundi — CRM de Vendas, Pós-vendas, Financeiro e WhatsApp</title>
+  <title>CRMundi — Boas Vindas</title>
   <meta name="description"
-    content="CRMundi é um CRM completo com módulos de Vendas, Pós-vendas, Financeiro e chat integrado ao WhatsApp." />
-  <meta property="og:title" content="CRMundi — CRM completo com WhatsApp" />
-  <meta property="og:description"
-    content="Organize seu funil de vendas, atenda no WhatsApp e gerencie o financeiro em um só lugar." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://crmundi.com" />
+    content="Assinatura efetuada com sucesso." />
   <link rel="stylesheet" href="./styles.css?v=1.0.6" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
