--- a/programa_profissionalizacao_agencias.html
+++ b/programa_profissionalizacao_agencias.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CRMundi — CRM de Vendas, Pós-vendas, Financeiro e WhatsApp</title>
+  <title>CRMundi — Programa de Profissionalização de Agências de Viagens</title>
   <meta name="description"
     content="CRMundi é um CRM completo com módulos de Vendas, Pós-vendas, Financeiro e chat integrado ao WhatsApp." />
   <meta property="og:title" content="CRMundi — CRM completo com WhatsApp" />
