--- a/programa_profissionalizacao_agencias.html
+++ b/programa_profissionalizacao_agencias.html
@@ -131,7 +131,7 @@
 
     <section id="contato" class="section cta-band">
       <div class="container cta-band-inner subscription-form">
-        <h2>Tudo o que sua agência precisa em um só lugar</h2>
+        <h2>Não perca essa chance</h2>
         <form class="contact-form" id="contactForm">
           <div class="form-group">
             <label for="name">Nome</label>
@@ -142,8 +142,9 @@
           <div class="form-group">
             <label for="email">Email</label>
             <br>
-            <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Forneça um email válido')"
-              oninput="this.setCustomValidity('')" autocomplete="email" maxlength="200">
+            <input type="email" id="email" name="email" required
+              oninvalid="this.setCustomValidity('Forneça um email válido')" oninput="this.setCustomValidity('')"
+              autocomplete="email" maxlength="200">
           </div>
           <div class="form-group">
             <label for="phone">Telefone/WhatsApp</label>
@@ -156,7 +157,8 @@
             <br>
             <input type="text" id="company" name="company" autocomplete="company" maxlength="200">
           </div>
-          <button id="enviaForm" type="submit" class="btn btn-primary pulse-element">Enviar</button>
+          <button style="width: 80%;margin: 0 auto;display: block;" id="enviaForm" type="submit"
+            class="btn btn-primary pulse-element">Quero participar</button>
         </form>
       </div>
     </section>
