--- a/programa_profissionalizacao_agencias.html
+++ b/programa_profissionalizacao_agencias.html
@@ -27,7 +27,7 @@
         <img src="img/logo.png" alt="CRMundi" />
       </a>
       <nav class="menu">
-        <a href="#porque_participar">Por que participar?</a>
+        <a href="#participe">Participe</a>
         <a href="#vantagens">Vantagens</a>
         <a href="#cronograma">Cronograma</a>
         <a href="#contato">Contato</a>
@@ -45,8 +45,7 @@
           <h1>Programa de Profissionalização CRMundi</h1>
           <p>Gestão, tecnologia e estratégia para agências de viagens que querem sair das planilhas</p>
           <div class="cta" style="margin-bottom: 20px;">
-            <a class="btn btn-primary pulse-element" target="_blank" rel="noopener"
-              href="https://wa.me/551152170968?text=Quero%20uma%20demo%20do%20CRMundi">Inscreva-se já</a>
+            <a class="btn btn-primary pulse-element" href="#participe">Inscreva-se já</a>
           </div>
           <p>
             O Programa de Profissionalização CRMundi foi criado para ajudar agências de viagens a evoluírem sua gestão,
@@ -65,7 +64,7 @@
       </div>
     </section>
 
-    <section id="integracoes" class="section integrations">
+    <section id="vantagens" class="section integrations">
       <div class="container">
         <h2>O que sua agência ganha na prática</h2>
         <div class="grid two">
@@ -96,8 +95,7 @@
               </ul>
             </div>
             <div class="cta">
-              <a class="btn btn-primary pulse-element" target="_blank" rel="noopener"
-                href="https://wa.me/551152170968?text=Quero%20uma%20demo%20do%20CRMundi">Inscreva-se já</a>
+              <a class="btn btn-primary pulse-element" href="#participe">Inscreva-se já</a>
             </div>
           </div>
           <div class="panel"><img src="./img/vantagens.png"></div>
@@ -105,7 +103,7 @@
       </div>
     </section>
 
-    <section id="beneficios" class="section">
+    <section id="cronograma" class="section">
       <div class="container">
         <h2>Cronograma do Programa</h2>
         <div class="grid cards">
@@ -129,7 +127,7 @@
       </div>
     </section>
 
-    <section id="contato" class="section cta-band">
+    <section id="participe" class="section cta-band">
       <div class="container cta-band-inner subscription-form">
         <h2>Não perca essa chance</h2>
         <form class="contact-form" id="contactForm">
@@ -180,9 +178,9 @@
       <div>
         <strong>Links</strong>
         <ul>
-          <li><a href="./#porque_participar">Módulos</a></li>
-          <li><a href="./#vantagens">Integrações</a></li>
-          <li><a href="./#cronograma">Benefícios</a></li>
+          <li><a href="./#modulos">Módulos</a></li>
+          <li><a href="./#integracoes">Integrações</a></li>
+          <li><a href="./#beneficios">Benefícios</a></li>
         </ul>
       </div>
     </div>
