fix: add facebook domain verification meta tag for improved tracking

--- a/assinatura_efetuada.html
+++ b/assinatura_efetuada.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CRMundi — Boas Vindas</title>
+
   <meta name="description"
     content="Assinatura efetuada com sucesso." />
+  <meta name="facebook-domain-verification" content="y7z0lrnvvf7buypi56ek5gq560jdaw" />
+
   <link rel="stylesheet" href="./styles.css?v=1.0.8" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
