--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CRMundi — CRM de Vendas, Pós-vendas, Financeiro e WhatsApp</title>
+
   <meta name="description"
     content="CRMundi é um CRM completo com módulos de Vendas, Pós-vendas, Financeiro e chat integrado ao WhatsApp." />
   <meta property="og:title" content="CRMundi — CRM completo com WhatsApp" />
@@ -12,6 +13,8 @@
     content="Organize seu funil de vendas, atenda no WhatsApp e gerencie o financeiro em um só lugar." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://crmundi.com" />
+  <meta name="facebook-domain-verification" content="y7z0lrnvvf7buypi56ek5gq560jdaw" />
+  
   <link rel="stylesheet" href="./styles.css?v=1.0.8" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
